test/tests/operators/from_amazon_sqs/validation/error_batch_size_too_large.txt
error: invalid batch size: 11
 --> tests/operators/from_amazon_sqs/validation/error_batch_size_too_large.tql:5:37
  |
5 | from_amazon_sqs "queue", batch_size=11
  |                                     ^^ 
  |
  = hint: batch size must be in the interval [1, 10]
